syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "greeter";
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

service Greeter{
    rpc SayHello(SayRequest)returns(SayResp){};
}

message SayRequest{
    string msg = 1;
}

message SayResp{
    string rsp = 1;
}
